--- a/WuWaPlanner/Views/Pulls/Pulls.cshtml
+++ b/WuWaPlanner/Views/Pulls/Pulls.cshtml
@@ -92,7 +92,7 @@
 								<th>@item.Name</th>
 								<th>@item.Pity.ToString()</th>
 								<th>
-									@($"{item.Time:d}")<br/>@($"{item.Time:hh:mm}")
+									@($"{item.Time:dd/MM/yyyy}")<br/>@($"{item.Time:HH:mm}")
 								</th>
 							</tr>
 						}
