--- a/WuWaPlanner/Views/Shared/_Layout.cshtml.css
+++ b/WuWaPlanner/Views/Shared/_Layout.cshtml.css
@@ -1,10 +1,4 @@
-﻿a.navbar-brand {
-	white-space: normal;
-	text-align: center;
-	word-break: break-all;
-}
-
-a {
+﻿a {
 	color: #0077cc;
 }
 
@@ -12,16 +6,6 @@ a {
 	color: #fff;
 	background-color: #1b6ec2;
 	border-color: #1861ac;
-}
-
-.nav-pills .nav-link.active, .nav-pills .show > .nav-link {
-	color: #fff;
-	background-color: #1b6ec2;
-	border-color: #1861ac;
-}
-
-.navbar-brand {
-	color: #ffffff;
 }
 
 .border-top {
@@ -52,10 +36,6 @@ div.sidebar {
 
 .container {
 
-}
-
-.navbar {
-	background-color: #212e3c !important;
 }
 
 .footer {
