--- a/WuWaPlanner/Views/Shared/_Layout.cshtml
+++ b/WuWaPlanner/Views/Shared/_Layout.cshtml
@@ -8,6 +8,19 @@
 	<link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css"/>
 	<link rel="stylesheet" href="~/css/site.css" asp-append-version="true"/>
 	<link rel="stylesheet" href="~/WuWaPlanner.styles.css" asp-append-version="true"/>
+
+	<!-- Open Graph meta tags -->
+	<meta property="og:title" content="WuWaPlanner by Satan1c"/>
+	<meta property="og:description" content="All in one, record your convenes, plan characters & weapons upgrades, for Wuthering Waves"/>
+	@*<meta property="og:image" content="https://example.com/image.jpg" />*@
+	<meta property="og:url" content="https://wuwa.satan1c.dev/"/>
+	<meta property="og:type" content="website"/>
+
+	<!-- Twitter Card meta tags -->
+	<meta name="twitter:card" content="summary_large_image"/>
+	<meta name="twitter:title" content="Your Page Title"/>
+	<meta name="twitter:description" content="A brief description of your page."/>
+	@*<meta name="twitter:image" content="https://example.com/image.jpg" />*@
 </head>
 <body>
 <header>
