--- a/WuWaPlanner/Views/Pulls/Pulls.cshtml
+++ b/WuWaPlanner/Views/Pulls/Pulls.cshtml
@@ -3,7 +3,7 @@
 @using WuWaPlanner.Controllers
 @using WuWaPlanner.Extensions
 @using WuWaPlanner.Models
-@using WuWaPlanner.Services.CsvManager.Models
+@using WuWaPlanner.Models.CsvManager
 @model PullsViewModel
 @inject IViewLocalizer                 Localizer
 @{
