--- a/WuWaPlanner/Views/Settings/Settings.cshtml
+++ b/WuWaPlanner/Views/Settings/Settings.cshtml
@@ -1,7 +1,7 @@
 ﻿@using Microsoft.AspNetCore.Mvc.Localization
 @using Microsoft.AspNetCore.Mvc.TagHelpers
-@model WuWaPlanner.Models.SettingsViewModel
-@inject IViewLocalizer                                       Localizer
+@model WuWaPlanner.Models.View.SettingsViewModel
+@inject IViewLocalizer                                            Localizer
 @{
 	ViewData["Title"] = "Settings";
 }
