--- a/WuWaPlanner/Views/Shared/_Layout.cshtml
+++ b/WuWaPlanner/Views/Shared/_Layout.cshtml
@@ -18,8 +18,8 @@
 
 	<!-- Twitter Card meta tags -->
 	<meta name="twitter:card" content="summary_large_image"/>
-	<meta name="twitter:title" content="Your Page Title"/>
-	<meta name="twitter:description" content="A brief description of your page."/>
+	<meta name="twitter:title" content="WuWaPlanner by Satan1c"/>
+	<meta name="twitter:description" content="All in one, record your convenes, plan characters & weapons upgrades, for Wuthering Waves"/>
 	@*<meta name="twitter:image" content="https://example.com/image.jpg" />*@
 </head>
 <body>
@@ -34,7 +34,8 @@
 
 <footer class="border-top footer text-muted">
 	<div class="container">
-		&copy; 2024 - WuWaPlanner
+		WuWaPlanner is not affiliated with Kuro Games.
+		Wuthering Waves, game content and materials are trademarks and copyrights of Kuro Games
 	</div>
 </footer>
 <script src="~/lib/jquery/dist/jquery.min.js"></script>
